# CommonLibSSE-NG-Template

./: CMakeLists.txt  README.md  vcpkg.json
src/: PCH.h  XSEPlugin.cpp
